// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures (snapshot) > channel-messages-only.yaml — omitted operation.messages falls back to channel messages 1`] = `
"import WebSocket from 'ws';

const socket = new WebSocket('wss://ping.example.com/ping');

socket.on('open', () => {
  socket.send(JSON.stringify({
    "timestamp": 1735689600
  }));
});

socket.on('message', (data) => {
  console.log(data.toString());
});"
`;

exports[`fixtures (snapshot) > multi-message.yaml — operation with multiple messages uses the first message 1`] = `
"import WebSocket from 'ws';

const socket = new WebSocket('wss://trading.example.com/orders');

socket.on('open', () => {
  socket.send(JSON.stringify({
    "symbol": "ACME",
    "quantity": 10
  }));
});

socket.on('message', (data) => {
  console.log(data.toString());
});"
`;

exports[`fixtures (snapshot) > pubsub.yaml — receive-only operation has no send call, shows example as a comment, and flags the unresolved query param 1`] = `
"// NOTE: some values could not be resolved from the AsyncAPI document's
// default/examples and were filled with a placeholder — replace them
// with real values before running this snippet:
//   - query param "region"

import WebSocket from 'ws';

const socket = new WebSocket('wss://alerts.example.com/alerts?region=%3Cregion%3E');

// Example message shape for this operation ("sampleAlert"):
// {
//   "severity": "high",
//   "message": "disk usage above threshold"
// }

socket.on('message', (data) => {
  console.log(data.toString());
});"
`;

exports[`fixtures (snapshot) > pubsub.yaml — send operation 1`] = `
"import WebSocket from 'ws';

const socket = new WebSocket('wss://alerts.example.com/heartbeat');

socket.on('open', () => {
  socket.send(JSON.stringify({
    "ok": true
  }));
});

socket.on('message', (data) => {
  console.log(data.toString());
});"
`;

exports[`fixtures (snapshot) > simple.yaml — send-only, no bindings, no channel parameters 1`] = `
"import WebSocket from 'ws';

const socket = new WebSocket('wss://ping.example.com/ping');

socket.on('open', () => {
  socket.send(JSON.stringify({
    "timestamp": 1735689600
  }));
});

socket.on('message', (data) => {
  console.log(data.toString());
});"
`;

exports[`fixtures (snapshot) > with-bindings.yaml — query param, header, and channel parameter all resolve 1`] = `
"import WebSocket from 'ws';

const socket = new WebSocket('wss://chat.example.com/rooms/general?token=abc123token', {
  headers: {
    'X-Client-Version': '1.0'
  },
});

socket.on('open', () => {
  socket.send(JSON.stringify({
    "text": "hello world",
    "from": "alice"
  }));
});

socket.on('message', (data) => {
  console.log(data.toString());
});"
`;

exports[`fixtures (snapshot) — agent/kafka > kafka.yaml — receive operation includes consumer group id 1`] = `
"# Order Events Service

**Version:** 1.0.0

You are an AI agent that needs to receive messages from an asynchronous (kafka) API operation ("consumeOrderCreated"). Use only the details below — do not invent field names, URLs, topics, or values that aren't given here.

## Servers

### production

**Host:** \`broker1.example.com:9092,broker2.example.com:9092\`
**Protocol:** kafka

### RECEIVE \`consumeOrderCreated\`

**Channel:** \`order-events\`
**Kafka client ID:** \`order-service-consumer\`
**Kafka consumer group ID:** \`order-processing-service\`
**Kafka message key:** \`order-42\`

#### consumeOrderCreated

An order was created

#### \`payload\`

\`\`\`json
{
  "type": "object",
  "properties": {
    "orderId": {
      "type": "string"
    },
    "total": {
      "type": "number"
    }
  }
}
\`\`\`

## Instructions

1. Subscribe/listen on the channel/topic \`order.events.v1\` on the server described above, using the authorization details given (if any).
2. Expect incoming messages conforming to the \`payload\` schema above."
`;

exports[`fixtures (snapshot) — agent/kafka > kafka.yaml — send operation includes kafka client id and message key 1`] = `
"# Order Events Service

**Version:** 1.0.0

You are an AI agent that needs to send a message to an asynchronous (kafka) API operation ("publishOrderCreated"). Use only the details below — do not invent field names, URLs, topics, or values that aren't given here.

## Servers

### production

**Host:** \`broker1.example.com:9092,broker2.example.com:9092\`
**Protocol:** kafka

### SEND \`publishOrderCreated\`

**Channel:** \`order-events\`
**Kafka client ID:** \`order-service-producer\`
**Kafka message key:** \`order-42\`

#### publishOrderCreated

An order was created

#### \`payload\`

\`\`\`json
{
  "type": "object",
  "properties": {
    "orderId": {
      "type": "string"
    },
    "total": {
      "type": "number"
    }
  }
}
\`\`\`

## Instructions

1. Construct a JSON payload that conforms to the \`payload\` schema above.
2. Send it to the channel/topic \`order.events.v1\` on the server described above, using the authorization details given (if any)."
`;

exports[`fixtures (snapshot) — agent/ws > pubsub.yaml — receive operation instructs to subscribe, not send 1`] = `
"# Alerts Service

**Version:** 1.0.0

You are an AI agent that needs to receive messages from an asynchronous (ws) API operation ("subscribeToAlerts"). Use only the details below — do not invent field names, URLs, topics, or values that aren't given here.

## Servers

### production

**Host:** \`alerts.example.com\`
**Protocol:** wss

### RECEIVE \`subscribeToAlerts\`

**Channel:** \`/alerts\`
**Query parameters:** \`region=<region>\`

#### subscribeToAlerts

An alert notification

#### \`payload\`

\`\`\`json
{
  "type": "object",
  "properties": {
    "severity": {
      "type": "string"
    },
    "message": {
      "type": "string"
    }
  }
}
\`\`\`

## Instructions

1. Subscribe/listen on the channel/topic \`/alerts\` on the server described above, using the authorization details given (if any).
2. Expect incoming messages conforming to the \`payload\` schema above.
3. Some values above could not be resolved from the AsyncAPI document's \`default\`/\`examples\` and are placeholders — replace them with real values before acting:
  - query param "region""
`;

exports[`fixtures (snapshot) — agent/ws > simple.yaml — send operation includes intro, server, payload schema, and instructions 1`] = `
"# Ping Service

**Version:** 1.0.0

You are an AI agent that needs to send a message to an asynchronous (ws) API operation ("sendPing"). Use only the details below — do not invent field names, URLs, topics, or values that aren't given here.

## Servers

### production

**Host:** \`ping.example.com\`
**Protocol:** wss

### SEND \`sendPing\`

**Channel:** \`/ping\`

#### sendPing

A ping message

#### \`payload\`

\`\`\`json
{
  "type": "object",
  "properties": {
    "timestamp": {
      "type": "number"
    }
  }
}
\`\`\`

## Instructions

1. Construct a JSON payload that conforms to the \`payload\` schema above.
2. Send it to the channel/topic \`/ping\` on the server described above, using the authorization details given (if any)."
`;

exports[`fixtures (snapshot) — agent/ws > streetlights.yaml — multiple servers each get their own Authorization, message headers schema is shown, channel is unsubstituted 1`] = `
"# Streetlights Kafka API

**Version:** 1.0.0  
**License:** Apache 2.0 (https://www.apache.org/licenses/LICENSE-2.0)

The Smartylighting Streetlights API allows you to remotely manage the city lights.

### Check out its awesome features:

* Turn a specific streetlight on/off 🌃
* Dim a specific streetlight 😎
* Receive real-time information about environmental lighting conditions 📈


You are an AI agent that needs to receive messages from an asynchronous (kafka) API operation ("receiveLightMeasurement"). Use only the details below — do not invent field names, URLs, topics, or values that aren't given here.

## Servers

### test

**Host:** \`test.mykafkacluster.org:8092\`
**Protocol:** kafka-secure
Test broker

**Authorization:**
- **SASL/SCRAM-SHA-256**
  Provide your username and password for SASL/SCRAM authentication

### test_oauth

**Host:** \`test.mykafkacluster.org:8093\`
**Protocol:** kafka-secure
Test port for oauth

**Authorization:**
- **OAuth2**
  The oauth security descriptions
  - Flow \`clientCredentials\`:
    - Token URL: \`https://example.com/api/oauth/dialog\`
    - Scopes: \`streetlights:read\`, \`streetlights:write\`

### RECEIVE \`receiveLightMeasurement\`

**Channel:** \`smartylighting.streetlights.1.0.event.{streetlightId}.lighting.measured\`
**Kafka client ID:** \`<kafka clientId>\`
**Kafka consumer group ID:** \`<kafka consumer group id>\`

Inform about environmental lighting conditions of a particular streetlight.

#### Light measured

Environmental lighting conditions of a particular streetlight.

Inform about environmental lighting conditions of a particular streetlight.

**Content-Type:** \`application/json\`

#### \`payload\`

\`\`\`json
{
  "type": "object",
  "properties": {
    "lumens": {
      "type": "integer",
      "minimum": 0,
      "description": "Light intensity measured in lumens."
    },
    "sentAt": {
      "type": "string",
      "format": "date-time",
      "description": "Date and time when the message was sent."
    }
  }
}
\`\`\`

#### \`headers\`

\`\`\`json
{
  "type": "object",
  "properties": {
    "my-app-header": {
      "type": "integer",
      "minimum": 0,
      "maximum": 100
    }
  }
}
\`\`\`

## Instructions

1. Subscribe/listen on the channel/topic \`smartylighting.streetlights.1.0.event.<streetlightId>.lighting.measured\` on the server described above, using the authorization details given (if any).
2. Expect incoming messages conforming to the \`payload\` schema above.
3. Some values above could not be resolved from the AsyncAPI document's \`default\`/\`examples\` and are placeholders — replace them with real values before acting:
  - channel parameter "streetlightId"
  - message payload (no explicit example — generated from its schema)
  - kafka clientId
  - kafka consumer group id"
`;

exports[`fixtures (snapshot) — agent/ws > with-security.yaml — server security resolves to an Authorization block under its server, describing API key + OAuth2 1`] = `
"# Secure Chat Service

**Version:** 2.0.0

A chat service that requires an API key and OAuth2 to connect.

You are an AI agent that needs to send a message to an asynchronous (ws) API operation ("sendMessage"). Use only the details below — do not invent field names, URLs, topics, or values that aren't given here.

## Servers

### production

**Host:** \`secure-chat.example.com\`
**Protocol:** wss

**Authorization:**
- **API key (in header: \`X-API-Key\`)**
  A static API key issued per client.
- **OAuth2**
  OAuth2 client-credentials flow.
  - Flow \`clientCredentials\`:
    - Token URL: \`https://secure-chat.example.com/oauth/token\`
    - Scopes: \`chat:write\`, \`chat:read\`

### SEND \`sendMessage\`

**Channel:** \`/rooms/{roomId}\`

#### sendMessage

A chat message

#### \`payload\`

\`\`\`json
{
  "type": "object",
  "properties": {
    "text": {
      "type": "string"
    }
  }
}
\`\`\`

## Instructions

1. Construct a JSON payload that conforms to the \`payload\` schema above.
2. Send it to the channel/topic \`/rooms/general\` on the server described above, using the authorization details given (if any)."
`;

exports[`fixtures (snapshot) — go/gorilla > pubsub.yaml — receive-only operation loops over ReadMessage without writing 1`] = `
"// NOTE: some values could not be resolved from the AsyncAPI document's
// default/examples and were filled with a placeholder — replace them
// with real values before running this snippet:
//   - query param "region"

package main

import (
	"log"

	"github.com/gorilla/websocket"
)

func main() {
	url := "wss://alerts.example.com/alerts?region=%3Cregion%3E"

	conn, _, err := websocket.DefaultDialer.Dial(url, nil)
	if err != nil {
		log.Fatal("dial:", err)
	}
	defer conn.Close()

	// Example message shape for this operation ("sampleAlert"):
	// {
	//   "severity": "high",
	//   "message": "disk usage above threshold"
	// }

	for {
		_, message, err := conn.ReadMessage()
		if err != nil {
			log.Println("read:", err)
			return
		}
		log.Println(string(message))
	}
}"
`;

exports[`fixtures (snapshot) — go/gorilla > simple.yaml — send-only, no bindings 1`] = `
"package main

import (
	"encoding/json"
	"log"

	"github.com/gorilla/websocket"
)

func main() {
	url := "wss://ping.example.com/ping"

	conn, _, err := websocket.DefaultDialer.Dial(url, nil)
	if err != nil {
		log.Fatal("dial:", err)
	}
	defer conn.Close()

	payload := map[string]interface{}{
		"timestamp": 1735689600,
	}

	data, err := json.Marshal(payload)
	if err != nil {
		log.Fatal("marshal:", err)
	}
	if err := conn.WriteMessage(websocket.TextMessage, data); err != nil {
		log.Fatal("write:", err)
	}

	_, message, err := conn.ReadMessage()
	if err != nil {
		log.Fatal("read:", err)
	}
	log.Println(string(message))
}"
`;

exports[`fixtures (snapshot) — go/gorilla > with-bindings.yaml — query param and header both resolve 1`] = `
"package main

import (
	"encoding/json"
	"log"
	"net/http"

	"github.com/gorilla/websocket"
)

func main() {
	url := "wss://chat.example.com/rooms/general?token=abc123token"

	header := http.Header{}
	header.Set("X-Client-Version", "1.0")

	conn, _, err := websocket.DefaultDialer.Dial(url, header)
	if err != nil {
		log.Fatal("dial:", err)
	}
	defer conn.Close()

	payload := map[string]interface{}{
		"text": "hello world",
		"from": "alice",
	}

	data, err := json.Marshal(payload)
	if err != nil {
		log.Fatal("marshal:", err)
	}
	if err := conn.WriteMessage(websocket.TextMessage, data); err != nil {
		log.Fatal("write:", err)
	}

	_, message, err := conn.ReadMessage()
	if err != nil {
		log.Fatal("read:", err)
	}
	log.Println(string(message))
}"
`;

exports[`fixtures (snapshot) — go/kafka-go > kafka.yaml — receive operation reads, without writing 1`] = `
"package main

import (
	"context"
	"log"

	"github.com/segmentio/kafka-go"
)

func main() {
	reader := kafka.NewReader(kafka.ReaderConfig{
		Brokers: []string{"broker1.example.com:9092", "broker2.example.com:9092"},
		Topic:   "order.events.v1",
		GroupID: "order-processing-service",
	})
	defer reader.Close()

	// Example message shape for this operation ("sampleOrderCreated"):
	// {
	//   "orderId": "order-42",
	//   "total": 59.99
	// }

	for {
		message, err := reader.ReadMessage(context.Background())
		if err != nil {
			log.Println("read:", err)
			return
		}
		log.Println(string(message.Value))
	}
}"
`;

exports[`fixtures (snapshot) — go/kafka-go > kafka.yaml — send operation resolves the topic override and message key 1`] = `
"package main

import (
	"context"
	"encoding/json"
	"log"

	"github.com/segmentio/kafka-go"
)

func main() {
	writer := &kafka.Writer{
		Addr:     kafka.TCP("broker1.example.com:9092", "broker2.example.com:9092"),
		Topic:    "order.events.v1",
		Balancer: &kafka.LeastBytes{},
	}
	defer writer.Close()

	payload := map[string]interface{}{
		"orderId": "order-42",
		"total": 59.99,
	}

	data, err := json.Marshal(payload)
	if err != nil {
		log.Fatal("marshal:", err)
	}

	message := kafka.Message{Value: data}
	message.Key = []byte("order-42")

	if err := writer.WriteMessages(context.Background(), message); err != nil {
		log.Fatal("write:", err)
	}
}"
`;

exports[`fixtures (snapshot) — javascript/kafkajs > kafka.yaml — receive operation subscribes and consumes, without sending 1`] = `
"import { Kafka } from 'kafkajs';

const kafka = new Kafka({
  clientId: 'order-service-consumer',
  brokers: ['broker1.example.com:9092', 'broker2.example.com:9092'],
});

const consumer = kafka.consumer({ groupId: 'order-processing-service' });

// Example message shape for this operation ("sampleOrderCreated"):
// {
//   "orderId": "order-42",
//   "total": 59.99
// }

async function main() {
  await consumer.connect();
  await consumer.subscribe({ topic: 'order.events.v1', fromBeginning: true });

  await consumer.run({
    eachMessage: async ({ message }) => {
      console.log(message.value?.toString());
    },
  });
}

main();"
`;

exports[`fixtures (snapshot) — javascript/kafkajs > kafka.yaml — send operation resolves the topic override and message key 1`] = `
"import { Kafka } from 'kafkajs';

const kafka = new Kafka({
  clientId: 'order-service-producer',
  brokers: ['broker1.example.com:9092', 'broker2.example.com:9092'],
});

const producer = kafka.producer();

async function main() {
  await producer.connect();
  await producer.send({
    topic: 'order.events.v1',
    messages: [
      {
        key: 'order-42',
        value: JSON.stringify({
          "orderId": "order-42",
          "total": 59.99
        }),
      },
    ],
  });
  await producer.disconnect();
}

main();"
`;

exports[`fixtures (snapshot) — javascript/websocket (browser) > pubsub.yaml — receive-only operation uses addEventListener 1`] = `
"// NOTE: some values could not be resolved from the AsyncAPI document's
// default/examples and were filled with a placeholder — replace them
// with real values before running this snippet:
//   - query param "region"

const socket = new WebSocket('wss://alerts.example.com/alerts?region=%3Cregion%3E');

// Example message shape for this operation ("sampleAlert"):
// {
//   "severity": "high",
//   "message": "disk usage above threshold"
// }

socket.addEventListener('message', (event) => {
  console.log(event.data);
});"
`;

exports[`fixtures (snapshot) — javascript/websocket (browser) > simple.yaml — send-only, no bindings 1`] = `
"const socket = new WebSocket('wss://ping.example.com/ping');

socket.addEventListener('open', () => {
  socket.send(JSON.stringify({
    "timestamp": 1735689600
  }));
});

socket.addEventListener('message', (event) => {
  console.log(event.data);
});"
`;

exports[`fixtures (snapshot) — javascript/websocket (browser) > with-bindings.yaml — query param resolves, header is documented as unsupported and omitted 1`] = `
"// NOTE: this operation's "ws" binding declares handshake headers
// (X-Client-Version), but the browser-native WebSocket API cannot
// set custom headers on the handshake request — they are omitted below.
// Move any required auth into the query string, or generate a Node.js
// snippet instead (targetId: "javascript", clientId: "ws").

const socket = new WebSocket('wss://chat.example.com/rooms/general?token=abc123token');

socket.addEventListener('open', () => {
  socket.send(JSON.stringify({
    "text": "hello world",
    "from": "alice"
  }));
});

socket.addEventListener('message', (event) => {
  console.log(event.data);
});"
`;

exports[`fixtures (snapshot) — python/confluent-kafka > kafka.yaml — receive operation subscribes and polls, without producing 1`] = `
"import json

from confluent_kafka import Consumer


consumer = Consumer({
    "bootstrap.servers": "broker1.example.com:9092,broker2.example.com:9092",
    "group.id": "order-processing-service",
    "client.id": "order-service-consumer",
    "auto.offset.reset": "earliest",
})

# Example message shape for this operation ("sampleOrderCreated"):
# {
#   "orderId": "order-42",
#   "total": 59.99
# }

consumer.subscribe(["order.events.v1"])

try:
    while True:
        msg = consumer.poll(1.0)
        if msg is None:
            continue
        if msg.error():
            print(msg.error())
            continue
        print(msg.value().decode('utf-8'))
finally:
    consumer.close()"
`;

exports[`fixtures (snapshot) — python/confluent-kafka > kafka.yaml — send operation resolves the topic override and message key 1`] = `
"import json

from confluent_kafka import Producer


producer = Producer({
    "bootstrap.servers": "broker1.example.com:9092,broker2.example.com:9092",
    "client.id": "order-service-producer",
})

payload = json.dumps({
    "orderId": "order-42",
    "total": 59.99,
})

producer.produce(
    "order.events.v1",
    value=payload.encode('utf-8'),
    key="order-42",
)
producer.flush()"
`;

exports[`fixtures (snapshot) — python/websockets > pubsub.yaml — receive-only operation uses async for 1`] = `
"# NOTE: some values could not be resolved from the AsyncAPI document's
# default/examples and were filled with a placeholder — replace them
# with real values before running this snippet:
#   - query param "region"

import asyncio

import websockets


async def main() -> None:
    async with websockets.connect("wss://alerts.example.com/alerts?region=%3Cregion%3E") as websocket:

        # Example message shape for this operation ("sampleAlert"):
        # {
        #   "severity": "high",
        #   "message": "disk usage above threshold"
        # }

        async for message in websocket:
            print(message)


asyncio.run(main())"
`;

exports[`fixtures (snapshot) — python/websockets > simple.yaml — send-only, no bindings 1`] = `
"import asyncio
import json

import websockets


async def main() -> None:
    async with websockets.connect("wss://ping.example.com/ping") as websocket:

        await websocket.send(
            json.dumps({
                "timestamp": 1735689600,
            })
        )

        message = await websocket.recv()
        print(message)


asyncio.run(main())"
`;

exports[`fixtures (snapshot) — python/websockets > with-bindings.yaml — query param and header both resolve 1`] = `
"import asyncio
import json

import websockets


async def main() -> None:
    async with websockets.connect(
        "wss://chat.example.com/rooms/general?token=abc123token",
        additional_headers={
            "X-Client-Version": "1.0",
        },
    ) as websocket:

        await websocket.send(
            json.dumps({
                "text": "hello world",
                "from": "alice",
            })
        )

        message = await websocket.recv()
        print(message)


asyncio.run(main())"
`;

exports[`fixtures (snapshot) — rust/rdkafka > kafka.yaml — receive operation subscribes and streams, without producing 1`] = `
"use rdkafka::config::ClientConfig;
use rdkafka::consumer::{Consumer, StreamConsumer};
use rdkafka::Message;
use futures_util::StreamExt;


// Example message shape for this operation ("sampleOrderCreated"):
// {
//   "orderId": "order-42",
//   "total": 59.99
// }

#[tokio::main]
async fn main() {
    let consumer: StreamConsumer = ClientConfig::new()
        .set("bootstrap.servers", "broker1.example.com:9092,broker2.example.com:9092")
        .set("group.id", "order-processing-service")
        .set("client.id", "order-service-consumer")
        .set("auto.offset.reset", "earliest")
        .create()
        .expect("Failed to create consumer");

    consumer.subscribe(&["order.events.v1"]).expect("Failed to subscribe");

    let mut stream = consumer.stream();
    while let Some(message) = stream.next().await {
        let message = message.expect("Failed to read message");
        if let Some(payload) = message.payload_view::<str>().and_then(Result::ok) {
            println!("{}", payload);
        }
    }
}"
`;

exports[`fixtures (snapshot) — rust/rdkafka > kafka.yaml — send operation resolves the topic override and message key 1`] = `
"use rdkafka::config::ClientConfig;
use rdkafka::producer::{FutureProducer, FutureRecord};
use std::time::Duration;


#[tokio::main]
async fn main() {
    let producer: FutureProducer = ClientConfig::new()
        .set("bootstrap.servers", "broker1.example.com:9092,broker2.example.com:9092")
        .set("client.id", "order-service-producer")
        .create()
        .expect("Failed to create producer");

    let payload = serde_json::json!({
      "orderId": "order-42",
      "total": 59.99
    });

    let record = FutureRecord::to("order.events.v1")
        .payload(&payload.to_string())
        .key("order-42");

    producer
        .send(record, Duration::from_secs(0))
        .await
        .expect("Failed to send message");
}"
`;

exports[`fixtures (snapshot) — rust/tokio-tungstenite > pubsub.yaml — receive-only operation loops over read without sending 1`] = `
"// NOTE: some values could not be resolved from the AsyncAPI document's
// default/examples and were filled with a placeholder — replace them
// with real values before running this snippet:
//   - query param "region"

use futures_util::{SinkExt, StreamExt};
use tokio_tungstenite::{connect_async, tungstenite::Message};


#[tokio::main]
async fn main() {
    let url = "wss://alerts.example.com/alerts?region=%3Cregion%3E";

    let (ws_stream, _) = connect_async(url).await.expect("Failed to connect");
    let (_write, mut read) = ws_stream.split();

    // Example message shape for this operation ("sampleAlert"):
    // {
    //   "severity": "high",
    //   "message": "disk usage above threshold"
    // }

    while let Some(msg) = read.next().await {
        println!("{}", msg.expect("Failed to read message"));
    }
}"
`;

exports[`fixtures (snapshot) — rust/tokio-tungstenite > simple.yaml — send-only, no bindings 1`] = `
"use futures_util::{SinkExt, StreamExt};
use tokio_tungstenite::{connect_async, tungstenite::Message};


#[tokio::main]
async fn main() {
    let url = "wss://ping.example.com/ping";

    let (ws_stream, _) = connect_async(url).await.expect("Failed to connect");
    let (mut write, mut read) = ws_stream.split();

    let payload = serde_json::json!({
      "timestamp": 1735689600
    });

    write
        .send(Message::Text(payload.to_string().into()))
        .await
        .expect("Failed to send message");

    if let Some(msg) = read.next().await {
        println!("{}", msg.expect("Failed to read message"));
    }
}"
`;

exports[`fixtures (snapshot) — rust/tokio-tungstenite > with-bindings.yaml — query param and header both resolve 1`] = `
"use futures_util::{SinkExt, StreamExt};
use tokio_tungstenite::{connect_async, tungstenite::client::IntoClientRequest, tungstenite::Message};


#[tokio::main]
async fn main() {
    let url = "wss://chat.example.com/rooms/general?token=abc123token";

    let mut request = url.into_client_request().expect("Invalid URL");
    request
        .headers_mut()
        .insert("X-Client-Version", "1.0".parse().expect("Invalid header value"));

    let (ws_stream, _) = connect_async(request).await.expect("Failed to connect");
    let (mut write, mut read) = ws_stream.split();

    let payload = serde_json::json!({
      "text": "hello world",
      "from": "alice"
    });

    write
        .send(Message::Text(payload.to_string().into()))
        .await
        .expect("Failed to send message");

    if let Some(msg) = read.next().await {
        println!("{}", msg.expect("Failed to read message"));
    }
}"
`;

exports[`fixtures (snapshot) — schema-generated examples > schema-generated.yaml — kafka-secure server, no explicit bindings or examples, resolves entirely from protocol derivation + schema generation 1`] = `
"// NOTE: some values could not be resolved from the AsyncAPI document's
// default/examples and were filled with a placeholder — replace them
// with real values before running this snippet:
//   - message payload (no explicit example — generated from its schema)
//   - kafka clientId
//   - kafka consumer group id

import { Kafka } from 'kafkajs';

const kafka = new Kafka({
  clientId: '<kafka clientId>',
  brokers: ['broker.example.com:9092'],
});

const consumer = kafka.consumer({ groupId: '<kafka consumer group id>' });

// Example message shape for this operation:
// {
//   "lumens": 0,
//   "sentAt": "2024-01-01T00:00:00Z",
//   "tags": [
//     "string"
//   ],
//   "status": "on"
// }

async function main() {
  await consumer.connect();
  await consumer.subscribe({ topic: 'lighting.measured', fromBeginning: true });

  await consumer.run({
    eachMessage: async ({ message }) => {
      console.log(message.value?.toString());
    },
  });
}

main();"
`;

exports[`fixtures (snapshot) — shell/websocat > pubsub.yaml — receive-only operation has no echo/pipe, shows example as a comment, and flags the unresolved query param 1`] = `
"# NOTE: some values could not be resolved from the AsyncAPI document's
# default/examples and were filled with a placeholder — replace them
# with real values before running this snippet:
#   - query param "region"

# Example message shape for this operation ("sampleAlert"):
# {
#   "severity": "high",
#   "message": "disk usage above threshold"
# }

websocat 'wss://alerts.example.com/alerts?region=%3Cregion%3E'"
`;

exports[`fixtures (snapshot) — shell/websocat > simple.yaml — send-only, no bindings 1`] = `"echo '{"timestamp":1735689600}' | websocat -n1 'wss://ping.example.com/ping'"`;

exports[`fixtures (snapshot) — shell/websocat > with-bindings.yaml — query param and header both resolve 1`] = `
"echo '{"text":"hello world","from":"alice"}' | websocat -n1 'wss://chat.example.com/rooms/general?token=abc123token' \\
  -H='X-Client-Version: 1.0'"
`;
